--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -2,13 +2,12 @@
 
 <h1>Genres</h1>
 
-<table>
+<table border=1>
   <thead>
     <tr>
       <th>Name</th>
       <th>Total word count</th>
       <th>Novel word ratio</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -18,9 +17,6 @@
         <td><%= link_to genre.name, genre_path(genre) %></td>
         <td><%= genre.total_word_count %></td>
         <td><%= genre.novel_word_ratio %></td>
-        <td><%= link_to 'Show', genre %></td>
-        <td><%= link_to 'Edit', edit_genre_path(genre) %></td>
-        <td><%= link_to 'Destroy', genre, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
