--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -6,7 +6,9 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Total songs</th>
       <th>Total word count</th>
+      <th>Novel word count</th>
       <th>Novel word ratio</th>
     </tr>
   </thead>
@@ -15,8 +17,10 @@
     <% @genres.each do |genre| %>
       <tr>
         <td><%= link_to genre.name, genre_path(genre) %></td>
-        <td><%= genre.total_word_count %></td>
-        <td><%= genre.novel_word_ratio %></td>
+        <td><%= genre.find_songs_by_genre.size  %></td>
+        <td><%= genre.get_genre_word_count %></td>
+        <td><%= genre.get_genre_novel_word_count %></td>
+        <td><%= genre.genre_novel_word_ratio %></td>
       </tr>
     <% end %>
   </tbody>
